# OPN-Cockpit

./: .dockerignore  .gitignore  Anforderungen  CHANGELOG.md  Dockerfile  Feature-Requests  LICENSE  README.md  THIRD-PARTY-NOTICES.md  docker-compose.yml  pyproject.toml  start.bat  start.ps1
.github/workflows/: release.yml
docs/: DESIGN-GUIDE.md  DOCKER.md  FEATURES.md  INSTALLATION-WINDOWS.md  QUICKSTART.md  RELEASING.md  ROADMAP.md  SECURITY-AUDIT.md  SERVICE-MODE.md  SESSION-NOTES-0.6.0.md  SESSION-NOTES-2026-06-01.md  TEST-FINDINGS-2026-06-01.md  TESTPLAN-0.6.0.md  example-aliases.json  example-routes.csv  opnsense-api-26.1.md
installer/: README.md  bundle-python.ps1  opn-cockpit.iss
installer/linux/: README.md  install.sh  opn-cockpit.service  proxmox-helper.sh
installer/winget/: README.md  generate-manifests.ps1
installer/winget/template/: ludwig-systems.opn-cockpit.installer.yaml  ludwig-systems.opn-cockpit.locale.de-DE.yaml  ludwig-systems.opn-cockpit.yaml
mockups/: web-mockup.html
scripts/: demo_setup.py  install-service.ps1  setup-venv.ps1  stop-processes.ps1  uninstall-service.ps1
src/opn_cockpit/: __init__.py  __main__.py  config.py  runtime_version.py
src/opn_cockpit/audit/: backend.py  chain.py  log.py  pdf_report.py  sqlite_backend.py
src/opn_cockpit/backups/: __init__.py  errors.py  model.py  storage.py
src/opn_cockpit/cli/: __main__.py  _io.py  main.py
src/opn_cockpit/core/: config_compare.py  config_drift.py  device_info.py  discovery.py  errors.py  health.py  http_client.py  result.py  ssh_rollback.py  ssh_safety_net.py  trust_store.py  validation.py
src/opn_cockpit/gui/: app.py  audit_view.py  create_vault_dialog.py  inventory_view.py  login_dialog.py  main_window.py  preview_dialog.py  result_dialog.py
src/opn_cockpit/importers/: csv_devices.py  csv_routes.py  json_aliases.py  json_devices.py
src/opn_cockpit/inventory/: model.py  selectors.py  store.py
src/opn_cockpit/migrations/: __init__.py  backup.py  errors.py  registry.py  runner.py  state.py
src/opn_cockpit/orchestration/: backend.py  executor.py  plan_store.py  planner.py  registry.py  reporter.py  sqlite_store.py
src/opn_cockpit/profiles/: backend.py  sqlite_store.py  store.py
src/opn_cockpit/security/: auth_backend.py  masking.py  session.py  totp.py  users.py
src/opn_cockpit/storage/: __init__.py  sqlite_db.py
src/opn_cockpit/updates/: __init__.py  cache.py  github.py  model.py  service.py  version.py
src/opn_cockpit/vault/: crypto.py  discovery.py  errors.py  format.py  model.py  store.py
src/opn_cockpit/web/: acl.py  rate_limit.py  (+9 more)
tests/: conftest.py  test_scaffold.py
tests/integration/: README.md
tests/unit/: test_config.py
(+112 files in other folders)
