[project]
name = "opn-cockpit"
version = "0.7.0.dev0"
description = "Multi-Site OPNsense-Management — Windows-Single-User, Windows-Multi-User-Server, Linux/Proxmox-Server. REST-API-basiert."
readme = "README.md"
requires-python = ">=3.11"
license = "Apache-2.0"
license-files = ["LICENSE"]
authors = [{ name = "OPN-Cockpit Maintainers" }]

dependencies = [
    "httpx>=0.27",
    "argon2-cffi>=23.1",
    "cryptography>=42",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "jinja2>=3.1",
    "python-multipart>=0.0.12",
    "fpdf2>=2.7",
    "paramiko>=3.4",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "hypothesis>=6.100",
    "ruff>=0.5",
    "mypy>=1.10",
    "respx>=0.21",
]

[project.scripts]
opn-cockpit-cli = "opn_cockpit.cli.main:main"
opn-cockpit = "opn_cockpit.__main__:main"

[build-system]
requires = ["hatchling>=1.24"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/opn_cockpit"]

# ---------------------------------------------------------------------------
# Tooling
# ---------------------------------------------------------------------------

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E", "F", "W",   # pycodestyle / pyflakes
    "I",             # isort
    "B",             # flake8-bugbear
    "UP",            # pyupgrade
    "SIM",           # flake8-simplify
    "PL",            # pylint subset
    "RUF",           # ruff-specific
]
ignore = ["PLR0913"]  # many arguments often legit for adapter signatures

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["PLR2004", "S101"]
# build_parser ist intentional eine lange Aufzählung von Sub-Commands.
"src/opn_cockpit/cli/main.py" = ["PLR0915"]
# FastAPI nutzt `Depends(...)` als Default-Argument — Standard-Pattern.
"src/opn_cockpit/web/**" = ["B008"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_unused_ignores = true
warn_redundant_casts = true
disallow_untyped_decorators = false
mypy_path = "src"
packages = ["opn_cockpit"]

[[tool.mypy.overrides]]
module = ["argon2.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
addopts = [
    "-ra",
    "--strict-markers",
    "--strict-config",
]
markers = [
    "live: Integrationstest gegen echte OPNsense (nur mit Test-Lab ausführen)",
]

[tool.coverage.run]
branch = true
source = ["src/opn_cockpit"]

[tool.coverage.report]
exclude_also = [
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
    "\\.\\.\\.",
]
show_missing = true
